--- a/html/Gestion.html
+++ b/html/Gestion.html
@@ -18,15 +18,13 @@
 	  </ul>
 </nav>
 
-<div class="d-md-none d-lg-block">
-<div class="d-none d-md-block">
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+
+<nav class="navbar navbar-expand-md navbar-light bg-light" style="display:none;">
   <a class="col-sm-12 d-flex justify-content-center">
      <img src="../img/logo.png" width="430" height="230" class="img-fluid" alt="Responsive image">
   </a>
 </nav>
-</div>
-</div>
+
 <nav class="navbar navbar-expand-md bg-danger navbar-dark">
  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -49,13 +47,13 @@
       <li class="nav-item active">
         <a class="nav-link" href="Catalogo.html"><img src="../icono/catalogo.png" width="30" class="img-fluid" alt="Responsive image">Catalogo</a>
       </li> 
-        <li class="nav-item active">
+        <li class="nav-item active" style="display:none;">
         <a class="nav-link" href="factura.html"><img src="../icono/factura.png" width="25" class="img-fluid" alt="Responsive image">Factura</a>
       </li>   
        <li class="nav-item active">
         <a class="nav-link" href="contactos.html"><img src="../icono/contacto.png" width="30" class="img-fluid" alt="Responsive image">Contactos</a>
       </li>   
-      <li class="nav-item active">
+      <li class="nav-item active" style="display:none;">
         <a class="nav-link" href="chat.html"><img src="../icono/avion.png" width="30" class="img-fluid" alt="Responsive image">Chats</a>
       </li>  
     </ul>
