--- a/html/menu-login.html
+++ b/html/menu-login.html
@@ -21,15 +21,12 @@
 	  </ul>
 </nav>
 
-<div class="d-md-none d-lg-block">
-<div class="d-none d-md-block">
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-light bg-light" style="display:none;">
   <a class="col-sm-12 d-flex justify-content-center">
      <img src="../img/logo.png" width="430" height="230" class="img-fluid" alt="Responsive image">
   </a>
 </nav>
-</div>
-</div>
+
 
 <nav class="navbar navbar-expand-md bg-danger navbar-dark">
  
@@ -44,7 +41,7 @@
        <li class="nav-item active">
         <a class="nav-link" href="Gestion.html"><img src="../icono/gestion.png" width="30" class="img-fluid" alt="Responsive image">Gestion Farmaceutica</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active" >
         <a class="nav-link" href="productos.html"><img src="../icono/producto.png" width="30" class="img-fluid" alt="Responsive image">Productos</a>
       </li>
      <li class="nav-item active">
@@ -53,13 +50,13 @@
       <li class="nav-item active">
         <a class="nav-link" href="Catalogo.html"><img src="../icono/catalogo.png" width="30" class="img-fluid" alt="Responsive image">Catalogo</a>
       </li> 
-        <li class="nav-item active">
+        <li class="nav-item active" style="display:none;">
         <a class="nav-link" href="factura.html"><img src="../icono/factura.png" width="25" class="img-fluid" alt="Responsive image">Factura</a>
       </li>   
        <li class="nav-item active">
         <a class="nav-link" href="contactos.html"><img src="../icono/contacto.png" width="30" class="img-fluid" alt="Responsive image">Contactos</a>
       </li>  
-      <li class="nav-item active">
+      <li class="nav-item active" style="display:none;">
         <a class="nav-link" href="chat.html"><img src="../icono/avion.png" width="30" class="img-fluid" alt="Responsive image">Chats</a>
       </li>   
     </ul>
@@ -140,7 +137,7 @@ Confia En Nosotros Y Nostros Confiaremos En Ti Plenamente. Unete A Nosotros Con 
 <footer>
 <nav class="navbar navbar-expand-md bg-danger navbar-dark">
  <div class="col-sm-12 d-flex justify-content-center">
-<p class="text-light"><img src="img/Marca.png" width="20" class="img-fluid" alt="Responsive image">Entrega tu confianza, con nosotros encontraras la diferencia</p>
+<p class="text-light"><img src="../img/Marca.png" width="20" class="img-fluid" alt="Responsive image">Entrega tu confianza, con nosotros encontraras la diferencia</p>
  <div>
  </nav>
 </footer>
