--- a/html/pedido.html
+++ b/html/pedido.html
@@ -19,15 +19,13 @@
 	  </ul>
 </nav>
 
-<div class="d-md-none d-lg-block">
-<div class="d-none d-md-block">
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+
+<nav class="navbar navbar-expand-md navbar-light bg-light" style="display:none;"> 
   <a class="col-sm-12 d-flex justify-content-center">
      <img src="../img/logo.png" width="430" height="230" class="img-fluid" alt="Responsive image">
   </a>
 </nav>
-</div>
-</div>
+
 <nav class="navbar navbar-expand-md bg-danger navbar-dark">
  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -50,21 +48,21 @@
       <li class="nav-item active">
         <a class="nav-link" href="Catalogo.html"><img src="../icono/catalogo.png" width="30" class="img-fluid" alt="Responsive image">Catalogo</a>
       </li> 
-        <li class="nav-item active">
+        <li class="nav-item active" style="display:none;">
         <a class="nav-link" href="factura.html"><img src="../icono/factura.png" width="25" class="img-fluid" alt="Responsive image">Factura</a>
       </li>   
        <li class="nav-item active">
         <a class="nav-link" href="contactos.html"><img src="../icono/contacto.png" width="30" class="img-fluid" alt="Responsive image">Contactos</a>
       </li>   
-      <li class="nav-item active">
+      <li class="nav-item active" style="display:none;">
         <a class="nav-link" href="chat.html"><img src="../icono/avion.png" width="30" class="img-fluid" alt="Responsive image">Chats</a>
       </li>  
     </ul>
   </div>  
 </nav>
 <br>
-<div class="container">
-        <div class="row">
+<div class="container mt-3">
+        <div class="row mt-3">
             <div class="col-xl-6  col-lg-6 col-md-6 col-sm-6 col-6 bg-primary">
            <h1 class="row justify-content-center h-80 text-light "> Farmacia Cruz Roja</h1>
               <p class="row justify-content-center h-80 font-weight-bold text-light ">Pedidos<p>
@@ -256,7 +254,7 @@
             </p>
           </div>
           <div class="card-footer">
-            <a href="https://www.farmatodo.com.co/" class="btn btn-light btn-lg  font-weight-bold">Ver más</a>
+            <a href="nuevocalculo.html" class="btn btn-light btn-lg  font-weight-bold">Ver más</a>
           </div>
         </div>
       </div>
